<resources>
    <string name="app_name">QuizApp</string>
    <string name="q1">Which is the first major defence ship to clear all sea acceptance trials in a single sea sortie?</string>
    <string name="option_a">A</string>
    <string name="option_b">B</string>
    <string name="option_c">C</string>
    <string name="option_d">D</string>
    <string name="next_question">Next</string>

</resources>