<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quiz_color"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/totalQuizTimerId"
        android:text="60"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/totalQuizTimerId"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/horiz_progressbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_bar"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:padding="30dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/questionId"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/q1"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/card_a_id"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/option_a_Id"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/option_a"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/card_b_id"
            android:layout_weight="1"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:padding="15dp"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/option_B_Id"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/option_b"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="12dp"
            android:id="@+id/card_c_id"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/option_C_Id"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/option_c"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:id="@+id/card_d_id"
            app:cardCornerRadius="12dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/option_D_Id"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/option_d"/>

        </androidx.cardview.widget.CardView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@drawable/backgroundshap"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/nextBtnId"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            android:text="@string/next_question"/>

    </LinearLayout>




</RelativeLayout>